# pyrator

./: .gitignore  README.md  TODO.codex.md  pyproject.toml
.github/workflows/: ci.yml
ontology/: core.py
pyrator/: __init__.py  api.py  config.py  types.py
pyrator/api/: __init__.py  _estimators.py  _results.py  _schemas.py
pyrator/cli/: __init__.py  drift.py
pyrator/data/: __init__.py  backends.py  batching.py  canonical.py  encoders.py  loaders.py  registry.py  spi.py
pyrator/data/backends/: __init__.py  backends.py  base.py  duckdb.py  pandas.py  polars.py  pyarrow.py
pyrator/drift/: __init__.py  _utils.py  cramer_v.py  jsd.py  mmd.py  monitor.py  psi.py  wasserstein.py
pyrator/ira/: __init__.py  icc.py  kappa.py  krippendorff.py  semantic.py
pyrator/ontology/: core.py
tests/: conftest.py  test_api.py  test_backends.py  test_backends_legacy_module.py  test_batching.py  test_canonical.py  test_config.py  test_duckdb_backend.py  test_encoders.py  test_icc.py  test_kappa.py  test_load_any_detection.py  test_loaders.py  test_ontology_core_additional.py  test_ontology_distance.py  test_ontology_semantic.py  test_pandas_parquet_streaming.py  test_pyarrow_backend_contract.py  test_registry.py  test_types.py
tests/drift/: test_cramer_v.py  test_jsd.py  test_mmd.py  test_monitor_config.py  test_psi.py  test_wasserstein.py
