[project]
name = "pyrator"
version = "0.1.0"
description = "A comprehensive Python library for interrater reliability and agreement analysis."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Mike Hamilton", email = "mike.hamilton7@gmail.com" }]
keywords = ["statistics", "interrater", "reliability", "kappa", "icc", "data drift"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

# Core libraries needed for basic functionality
dependencies = [
    "krippendorff>=0.8.1",
    "loguru>=0.7.3",
    "numpy>=2.4.1",
    "orjson>=3.11.3",
    "pandera>=0.26.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
]

[project.optional-dependencies]
# Group for plotting functionality
plotting = ["matplotlib>=3.10.5", "seaborn>=0.13.2"]
# Group for Bayesian methods
bayesian = ["pymc>=5.25.1", "jax>=0.7.1"]
# Group for large dataset/database backend support
database = [
    "duckdb>=1.3.2",
    "duckdb-engine>=0.17.0",
    "ibis-framework[duckdb]>=10.8.0",
    "sqlalchemy>=2.0.43",
]
# Group for data processing backends
backends = [
    "duckdb>=1.3.2",
    "ibis>=3.3.0",
    "pyarrow>=21.0.0",
    "statsmodels>=0.14.5",
]
# Individual data backends for fine-grained installation
pandas = ["pandas>=2.3.2"]
polars = ["ibis-framework[polars]>=10.8.0"]
# A convenience group to install everything
all = [
    "pyrator[plotting]",
    "pyrator[bayesian]",
    "pyrator[database]",
    "pyrator[backends]",
    "pyrator[polars]",
    "pyrator[pandas]",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "jupyterlab>=4.4.6",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.21",
    "mypy>=1.17.1",
    "pandas-stubs>=2.3.2.250827",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-sugar>=1.1.1",
    "ruff>=0.12.11",
]
polars = [
    "polars>=1.32.3",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C90"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=pyrator -ra -q"
testpaths = ["tests"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[project.urls]
Homepage = "https://github.com/bio-comp/pyrator"
Repository = "https://github.com/bio-comp/pyrator"
"Bug Tracker" = "https://github.com/bio-comp/pyrator/issues"
